# azure-functions-dotnet-worker

./: .editorconfig  .gitignore  .reporoot  CODEOWNERS  Directory.Build.props  Directory.Build.targets  DotNetWorker.Extensions.sln  DotNetWorker.Extensions.slnf  DotNetWorker.Samples.sln  DotNetWorker.sln  EventHubs.csproj  NuGet.Config  README.md  SignalRService.csproj  WebJobs.Script.sln  azure-pipelines.yml  global.json  pack-sdk.ps1  release_notes.md  run-e2e-tests.ps1  setup-e2e-tests.ps1
.github/: fabricbot.json
CustomerMainApp/: .gitignore  CustomerMainApp.csproj  Program.cs
FunctionsDotNetWorkerTests/: FunctionInvokeTests.cs  FunctionLoadTests.cs  FunctionRpcClientTests.cs  FunctionsDotNetWorkerTests.csproj  ParameterConverterManagerTests.cs
SourceGenerator/: AttributeExtensions.cs  FunctionGenerator.cs  FunctionProvider.cs  Generator.cs  MethodInfoExtensions.cs  ParameterInfoExtensions.cs  SourceGenerator.csproj  StringExtension.cs  TypeInfoExtensions.cs  TypeUtility.cs  worker.config.json
TestClassLibrary/: Class1.cs  TestClassLibrary.csproj
docs/: _config.yml
extensions/: Directory.Build.Targets  Directory.Build.props  (+1 more)
host/src/: .clang-format  CMakeLists.txt  CMakePresets.json  Directory.Build.props  Directory.Version.props  FunctionsNetHost.sln  README.md  appconfig.h.in  global.json  vcpkg.json
host/src/FunctionsCustomHost/: Program.cs
host/src/FunctionsCustomHost/AppLoader/: AppLoader.cs
host/src/FunctionsCustomHost/Prelaunch/: Prelauncher.cs
host/src/FunctionsNetHost/: CMakeLists.txt  FunctionsNetHost.csproj  GrpcClient.cs  GrpcWorkerStartupOptions.cs  HostTraceManager.cs  InboundMessageChannel.cs  IncomingMessageHandler.cs  Logger.cs  NativeExports.cs  NativeHostApplication.cs  PathUtils.cs  Program.cs  SpecializationSyncManager.cs  exports.def  global.json  main.cpp  managedexports.cpp
host/src/FunctionsNetHost.PlaceholderApp/: FunctionsNetHost.PlaceholderApp.csproj  Logger.cs
host/src/FunctionsNetHost.PlaceholderApp/Interop/: NativeMethods.cs
host/src/FunctionsNetHost.PlaceholderApp/JitTrace/: JitTraceRuntime.cs
host/src/FunctionsNetHost.Shared/: Constants.cs  EnvironmentVariables.cs  FunctionsNetHost.Shared.csproj  SpecializeMessage.cs
host/src/FunctionsNetHost.Shared/Interop/: SpecializeMessage.cs
host/src/FunctionsNetHost.SiteExtension/: Compress-SiteExtension.ps1  FunctionsNetHost.SiteExtension.csproj  New-PrivateSiteExtension.ps1  Prepare-SiteExtensionArtifacts.ps1  Publish.MultiTFM.targets  Publish.SingleTFM.targets  Tasks.targets  applicationHost.xdt  extension.xml  readme.md
host/src/FunctionsNetHost/AppLoader/: AppLoader.cs  AssemblyPreloader.cs  HostFxr.cs  NetHost.cs  PathResolver.Linux.cs  PathResolver.Windows.cs  PathResolver.cs  Preloader.cs
host/src/FunctionsNetHost/Configuration/: Configuration.cs
host/src/FunctionsNetHost/Diagnostics/: AppLoaderEventSource.cs  Constants.cs
host/src/FunctionsNetHost/Environment/: EnvironmentSettingNames.cs  EnvironmentUtils.cs  EnvironmentVariables.cs
host/src/FunctionsNetHost/Grpc/: AppPayloadNotFoundException.cs  GrpcClient.cs  GrpcWorkerStartupOptions.cs  IGrpcEventStream.cs  InboundMessageChannel.cs  IncomingGrpcMessageHandler.cs  IncomingMessageHandler.cs  MessageChannel.cs  NetHostRunOptions.cs  PathUtils.cs  UnsupportedVersionException.cs  WorkerCapabilities.cs
host/src/FunctionsNetHost/Grpc/Exceptions/: EnvironmentReloadNotSupportedException.cs  EnvironmentReloadUnsupportedException.cs  FunctionAppPayloadNotFoundException.cs
host/src/FunctionsNetHost/Grpc/WorkerConfig/: WorkerConfig.cs  WorkerConfigSerializerContext.cs  WorkerConfigUtils.cs  WorkerDescription.cs
host/src/FunctionsNetHost/Native/: NativeExports.cs  NativeExportsForManagerLoader.cs  NativeHostApplication.cs  NativeHostData.cs
host/src/FunctionsNetHost/PreJit/: PreJitManager.cs  coldstart.jittrace
host/src/FunctionsNetHost/Prelaunch/: Prelauncher.cs
host/src/FunctionsNetHost/Preload/: PreLoader.cs
host/src/FunctionsNetHost/Properties/: AssemblyInfo.cs  launchSettings.json
host/src/ManagedLoader/: AppLoader.cs  Constants.cs  FunctionsNetHost.ManagedLoader.csproj  FunctionsNetHost.ManagedLoader.sln  Logger.cs  ManagedAppLoader.cs  ManagedLoader.sln  MessageType.cs  NativeHost.cs  NativeMethods.cs  NativeSafeHandle.cs  Program.cs  WorkerAssemblyResolver.cs
host/src/ManagedLoader/NativeHostIntegration/: AppLoaderNativeMethods.cs  NativeHost.cs  NativeMethods.cs  NativeSafeHandle.cs
host/src/ManagedLoader/PreJIT/: JitTraceRuntime.cs
host/src/ManagedLoader/PreJIT/net6.0/: coldstart.jittrace
host/src/PlaceholderApp/: FunctionsNetHost.PlaceholderApp.csproj  FunctionsNetHost.PlaceholderApp.sln  Logger.cs  PlaceholderApp.cs  PlaceholderApp.csproj  Program.cs  StartupHook.cs
host/src/PlaceholderApp/Interop/: NativeMethods.cs
host/src/PlaceholderApp/JitTrace/: linux.coldstart.jittrace
host/src/PlaceholderApp/PreJit/: JitTraceRuntime.cs
host/src/PlaceholderApp/PreJit/JitTrace/net9.0/: coldstart.jittrace
host/src/PrelaunchApp/: App.csproj  Program.cs
host/src/PreloadApps/net8.0/: Pinger.cs  Program.cs
host/src/Protos/: CMakeLists.txt
host/src/WebJobs.Script.SiteExtension/: Compress-SiteExtension.ps1  New-PrivateSiteExtension.ps1  Publish.SingleTFM.targets  Tasks.targets  WebJobs.Script.SiteExtension.csproj
host/src/funcgrpc/: CMakeLists.txt  byte_buffer_helper.cpp  byte_buffer_helper.h  func_bidi_reactor.cpp  func_bidi_reactor.h  func_log.cpp  func_log.h  func_message_types.h  func_perf_marker.h  funcgrpc.h  funcgrpc_handlers.h  funcgrpc_pathutils.h  funcgrpc_worker_config_handle.cpp  funcgrpc_worker_config_handle.h  messaging_channel.cpp  messaging_channel.h  nativehostapplication.cpp  nativehostapplication.h
host/src/funcgrpc/handlers/: funcgrpc_native_handler.cpp  funcgrpc_native_handler.h
(+2530 files in other folders)
